--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,36 @@ name = "TJ2"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dependencies.serde]
+version = "1"
+features = ["derive"]
+
+[dependencies.serde_json]
+version = "1"
+
+[dependencies.toml]
+version = "0.8"
+features = ["serde"]
+
+[dependencies.clap]
+version = "4"
+features = ["derive"]
+
+[dependencies.sha2]
+version = "0.10"
+
+[dependencies.sha3]
+version = "0.10"
+
+[dependencies.tokio]
+version = "1"
+features = ["signal", "time", "rt-multi-thread", "net", "fs", "tracing"]
+
+[dependencies.axum]
+version = "0.7"
+
+[dependencies.hyper]
+version = "1"
 
 [dependencies]
+
