--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,15 @@ version = "0.7"
 [dependencies.hyper]
 version = "1"
 
+[dependencies.axum-server]
+version = "0.7"
+
+[dependencies.futures]
+version = "0.3"
+
+[dependencies.tracing]
+version = "0.1"
+
+[dependencies.tracing-subscriber]
+version = "0.3"
+features = ["env-filter"]
