--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,16 @@ version = "0.1"
 [dependencies.tracing-subscriber]
 version = "0.3"
 features = ["env-filter"]
+
+[dependencies.sqlx]
+version = "0.8"
+default-features = false
+
+features = [
+    "sqlite",
+    "json",
+    "derive",
+    "macros",
+    "chrono",
+    "runtime-tokio",
+]
