added in rustls
added in the logic for having a build of the server that will rustls for
encrypting traffic to and from the server. still needs to be tested.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "TJ2"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+rustls = ["axum-server/tls-rustls"]
+
 [dependencies]
 
 [dependencies.serde]
