--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,13 @@ version = "0.8"
 features = ["small_rng", "std"]
 
 # -----------------------------------------------------------------------------
+# templates
+# -----------------------------------------------------------------------------
+
+[dependencies.tera]
+version = "1"
+
+# -----------------------------------------------------------------------------
 # network
 # -----------------------------------------------------------------------------
 
