--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,9 @@ version = "0.3"
 [dependencies.pin-project]
 version = "1"
 
+[dependencies.async-trait]
+version = "0.1"
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
