--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,9 @@ version = "1"
 version = "0.8"
 features = ["small_rng", "std"]
 
+[dependencies.argon2]
+version = "0.5"
+
 # -----------------------------------------------------------------------------
 # templates
 # -----------------------------------------------------------------------------
