--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 /data
 /node_modules
 
-/self_signed_certs/localhost.ecdsa.*
-/self_signed_certs/localhost.rsa.*
+/certs/localhost.ecdsa.*
+/certs/localhost.rsa.*
 
-/assets/stylesheet.css
+/frontend/assets/stylesheet.css
 
 server.config.toml
