base / login page updates
added some more styling to the login page and updated the index to use
the base template. also added in some favicons for the site to load.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build-css": "npx tailwindcss -i ./css/input.css -o ./assets/stylesheet.css"
+    "build-css": "npx tailwindcss -i ./frontend/css/input.css -o ./frontend/assets/stylesheet.css",
+    "watch-css": "npx tailwindcss -w -i ./frontend/css/input.css -o ./frontend/assets/stylesheet.css"
   },
   "dependencies": {
     "htmx.org": "^2.0.2",
