--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 default = ["rustls"]
 rustls = ["axum-server/tls-rustls"]
 
-[dependencies]
-
 # -----------------------------------------------------------------------------
 # serde
 # -----------------------------------------------------------------------------
@@ -55,6 +53,9 @@ features = ["serde"]
 
 [dependencies.base64]
 version = "0.22"
+
+[dependencies.cron]
+version = "0.12"
 
 # -----------------------------------------------------------------------------
 # security
@@ -125,6 +126,9 @@ version = "0.1"
 version = "0.3"
 features = ["env-filter"]
 
+[dependencies.url]
+version = "2"
+
 # -----------------------------------------------------------------------------
 # database
 # -----------------------------------------------------------------------------
@@ -141,6 +145,3 @@ features = [
     "chrono",
     "runtime-tokio",
 ]
-
-[dependencies.url]
-version = "2"
