initiator login updates
added in a macro to attempt to retrieve the initiator and return an
error or response depending on the result of the lookup.

updated the login page to allow for redirecting to a previous location
if one is provided.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,6 +129,9 @@ features = ["env-filter"]
 [dependencies.url]
 version = "2"
 
+[dependencies.urlencoding]
+version = "2"
+
 # -----------------------------------------------------------------------------
 # database
 # -----------------------------------------------------------------------------
