--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,9 @@ version = "0.22"
 [dependencies.cron]
 version = "0.12"
 
+[dependencies.nanoid]
+version = "0.4"
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
