--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,9 @@ version = "0.12"
 [dependencies.nanoid]
 version = "0.4"
 
+[dependencies.bytes]
+version = "1"
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
