--- a/frontend/assets.config.toml
+++ b/frontend/assets.config.toml
@@ -3,6 +3,7 @@ directory = "./templates"
 
 [assets.directories]
 "assets" = "./assets"
+"src" = "./src"
 
 [assets.files]
 "assets/htmx.min.js" = "../node_modules/htmx.org/dist/htmx.min.js"
