--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "watch-tsx": "rollup --config ./rollup.config.mjs --watch"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "htmx.org": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
