login page update
updated the login to use the react spa and also updated the requests to
return the necessary data when dealing with the login requests. also the
logout button does something now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,12 @@ features = ["small_rng", "std"]
 [dependencies.argon2]
 version = "0.5"
 
+[dependencies.validator]
+version = "0.18"
+
+[dependencies.ammonia]
+version = "4"
+
 # -----------------------------------------------------------------------------
 # templates
 # -----------------------------------------------------------------------------
