--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,10 @@ version = "0.4"
 [dependencies.bytes]
 version = "1"
 
+[dependencies.uuid]
+version = "1"
+features = ["v4"]
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
