--- a/Cargo.toml
+++ b/Cargo.toml
@@ -164,3 +164,14 @@ features = [
     "chrono",
     "runtime-tokio",
 ]
+
+[dependencies.tokio-postgres]
+version = "0.7"
+features = ["with-serde_json-1", "with-chrono-0_4"]
+
+[dependencies.deadpool-postgres]
+version = "0.14"
+
+[dependencies.postgres-types]
+version = "0.2"
+features = ["derive"]
