--- a/frontend/assets.config.toml
+++ b/frontend/assets.config.toml
@@ -7,4 +7,5 @@ directory = "./templates"
 
 [assets.files]
 "assets/htmx.min.js" = "../node_modules/htmx.org/dist/htmx.min.js"
+"assets/react-day-picker.css" = "../node_modules/react-day-picker/src/style.css"
 
