--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-tsx": "rollup --config ./rollup.config.mjs",
     "watch-tsx": "rollup --config ./rollup.config.mjs --watch"
   },
+  "type": "module",
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -16,8 +17,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
@@ -42,6 +45,7 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-replace": "^6.0.1",
     "@rollup/plugin-typescript": "^12.1.0",
+    "rolldown": "^1.0.0-beta.1",
     "rollup": "^4.24.0",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
