--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ rustls = ["axum-server/tls-rustls"]
 version = "1"
 features = ["derive"]
 
+[dependencies.serde_repr]
+version = "0.1"
+
 [dependencies.serde_json]
 version = "1"
 
