--- a/Cargo.toml
+++ b/Cargo.toml
@@ -152,6 +152,10 @@ version = "2"
 [dependencies.urlencoding]
 version = "2"
 
+[dependencies.reqwest]
+version = "0.12"
+features = ["json"]
+
 # -----------------------------------------------------------------------------
 # database
 # -----------------------------------------------------------------------------
