--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,9 @@ version = "1"
 version = "1"
 features = ["v4"]
 
+[dependencies.ringbuf]
+version = "0.4"
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
@@ -184,3 +187,10 @@ version = "0.14"
 [dependencies.postgres-types]
 version = "0.2"
 features = ["derive"]
+
+# -----------------------------------------------------------------------------
+# dev dependencies
+# -----------------------------------------------------------------------------
+
+[dev-dependencies.tracing-test]
+version = "0.2"
