--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-replace": "^6.0.1",
     "@rollup/plugin-typescript": "^12.1.0",
+    "@rsbuild/core": "^1.3.0",
+    "@rsbuild/plugin-react": "^1.1.1",
+    "@rspack/cli": "^1.3.0",
+    "@rspack/core": "^1.3.0",
     "rolldown": "^1.0.0-beta.1",
     "rollup": "^4.24.0",
     "tslib": "^2.7.0",
