--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,13 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ES2022",
+        "target": "ES2020",
+        "lib": ["DOM", "ES2020"],
+        "module": "ESNext",
         "jsx": "react-jsx",
+        "strict": true,
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "useDefineForClassFields": true,
         "moduleResolution": "Bundler",
         "sourceMap": true,
         "baseUrl": "./frontend/src/",
