remote servers update #6
adds in remote server api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,9 @@ version = "0.18"
 [dependencies.ammonia]
 version = "4"
 
+[dependencies.x509-cert]
+version = "0.2"
+
 # -----------------------------------------------------------------------------
 # templates
 # -----------------------------------------------------------------------------
