--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -8,3 +8,6 @@ tokio = { workspace = true }
 crypto_box = { workspace = true }
 rand = { workspace = true }
 thiserror = { workspace = true }
+serde = { workspace = true }
+chrono = { workspace = true }
+bincode = { workspace = true }
