--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,3 +11,6 @@ thiserror = { workspace = true }
 serde = { workspace = true }
 chrono = { workspace = true }
 bincode = { workspace = true }
+tokio-postgres = { workspace = true }
+postgres-types = { workspace = true }
+bytes = { workspace = true }
