--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -14,3 +14,4 @@ bincode = { workspace = true }
 tokio-postgres = { workspace = true }
 postgres-types = { workspace = true }
 bytes = { workspace = true }
+base64 = { workspace = true }
