--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,13 @@ features = ["v4"]
 [workspace.dependencies.ringbuf]
 version = "0.4"
 
+[workspace.dependencies.data-encoding]
+version = "2"
+
+[workspace.dependencies.moka]
+version = "0.12"
+features = ["sync"]
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
@@ -201,6 +208,8 @@ nanoid = { workspace = true }
 bytes = { workspace = true }
 uuid = { workspace = true }
 ringbuf = { workspace = true }
+data-encoding = { workspace = true }
+moka = { workspace = true }
 
 # security
 
