--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "date-fns": "^3.0.0",
     "htmx.org": "^2.0.2",
     "lucide-react": "^0.462.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^7.5.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
