--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "content-type": "^1.0.5",
     "date-fns": "^3.0.0",
     "htmx.org": "^2.0.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
