--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,3 +15,4 @@ tokio-postgres = { workspace = true }
 postgres-types = { workspace = true }
 bytes = { workspace = true }
 base64 = { workspace = true }
+data-encoding = { workspace = true }
