added ts type checking #31
added in a package to run the type checking when running rspack. will
need to check how it will work when doing production builds.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "resolveJsonModule": true,
         "useDefineForClassFields": true,
         "moduleResolution": "Bundler",
+        "isolatedModules": true,
         "sourceMap": true,
         "baseUrl": "./frontend/src/",
         "paths": {
