--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
+    "ts-checker-rspack-plugin": "^1.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -49,6 +50,8 @@
     "@rsbuild/plugin-react": "^1.1.1",
     "@rspack/cli": "^1.3.0",
     "@rspack/core": "^1.3.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   }
