small changes to audio component #31
started to make some small changes the audio component to deal with the
errors from the ts type checking. there are a large number of them and
some may require reworking code to better handle the errors. those will
probably better to handle later on given how many their are.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build-css": "npx tailwindcss -i ./frontend/styles/input.css -o ./frontend/assets/stylesheet.css",
     "watch-css": "npx tailwindcss -w -i ./frontend/styles/input.css -o ./frontend/assets/stylesheet.css",
-    "build-tsx": "npx rspack build",
-    "watch-tsx": "npx rspack build --watch"
+    "build-dev-tsx": "npx rspack dev",
+    "watch-dev-tsx": "npx rspack dev --watch"
   },
   "type": "module",
   "dependencies": {
