--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,10 @@ version = "2"
 version = "0.12"
 features = ["sync"]
 
+[workspace.dependencies.strum]
+version = "0.27"
+features = ["derive"]
+
 # -----------------------------------------------------------------------------
 # security
 # -----------------------------------------------------------------------------
@@ -216,6 +220,7 @@ uuid = { workspace = true }
 ringbuf = { workspace = true }
 data-encoding = { workspace = true }
 moka = { workspace = true }
+strum = { workspace = true }
 
 # security
 
