--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build-css": "npx tailwindcss -i ./frontend/styles/input.css -o ./frontend/assets/stylesheet.css",
     "watch-css": "npx tailwindcss -w -i ./frontend/styles/input.css -o ./frontend/assets/stylesheet.css",
+    "build-tsx": "npx rspack build",
+    "watch-tsx": "npx rspack build --watch",
     "build-dev-tsx": "npx rspack dev",
     "watch-dev-tsx": "npx rspack dev --watch"
   },
@@ -43,6 +45,7 @@
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
     "ts-checker-rspack-plugin": "^1.1.3",
+    "whatwg-mimetype": "^4.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
