--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@rsbuild/plugin-react": "^1.1.1",
     "@rspack/cli": "^1.3.0",
     "@rspack/core": "^1.3.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "tslib": "^2.7.0",
