--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@tanstack/react-query": "^5.70.0",
+    "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^7.5.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
