--- a/Cargo.toml
+++ b/Cargo.toml
@@ -169,7 +169,7 @@ version = "0.1"
 
 [workspace.dependencies.tracing-subscriber]
 version = "0.3"
-features = ["env-filter"]
+features = ["env-filter", "json"]
 
 [workspace.dependencies.tracing-appender]
 version = "0.2"
