--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,4 @@
-/assets/stylesheet.css
-/assets/js/*.bundle.js
-/assets/js/*.bundle.js.map
+/static/*.bundle.css
+/static/*.bundle.css.map
+/static/*.bundle.js
+/static/*.bundle.js.map
