--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-table": "^8.20.5",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "content-type": "^1.0.5",
@@ -36,6 +37,8 @@
     "htmx.org": "^2.0.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,6 +62,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "postcss-import": "^16.1.1",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   }
