--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,6 +155,7 @@ features = ["signal", "time", "rt-multi-thread", "net", "fs", "tracing", "io-uti
 
 [workspace.dependencies.tokio-util]
 version = "0.7"
+features = ["compat"]
 
 [workspace.dependencies.reqwest]
 version = "0.12"
